--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Exemplo
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Alcance Recursos Humanos</title>
+	</head>
+	<body>
+    <p>Exemplo</p>
+	</body>
+</html> 
